dependency update & formatting